Improved comments and added more import statements

--- a/Ch03/2.Convolution_networks.ipynb
+++ b/Ch03/2.Convolution_networks.ipynb
@@ -12,8 +12,24 @@
     "* Pooling layers\n",
     "* Dense layers (for final prediction)\n",
     "\n",
-    "In this chapter, we will use CNNs to learn the Cifar10 dataset. Like MNIST, Cifar10 is another popular dataset in computer vision. But it is a much more interesting dataset as you will see.\n",
+    "In this chapter, we will use CNNs to learn the Cifar10 dataset. Like MNIST, Cifar10 is another popular dataset in computer vision. But it is a much more interesting dataset as you will see. Specifically, you will learn the following.\n",
     "\n",
+    "* How to do simple data exploration\n",
+    "* How to define a CNN model\n",
+    "* How to format data to suit model training\n",
+    "* How to train a model\n",
+    "\n",
+    "<table align=\"left\">\n",
+    "    <td>\n",
+    "        <a target=\"_blank\" href=\"https://colab.research.google.com/github/thushv89/manning_tf2_in_action/blob/master/Ch03/2.Convolution_networks.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
+    "    </td>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Importing necessary libraries"
    ]
   },
@@ -236,6 +252,8 @@
     }
    ],
    "source": [
+    "# Code listing 3.2\n",
+    "\n",
     "from tensorflow.keras import layers, models\n",
     "import tensorflow.keras.backend as K\n",
     "\n",
@@ -266,6 +284,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Code listing 3.3\n",
+    "\n",
     "from tensorflow.keras import layers, models\n",
     "import tensorflow.keras.backend as K\n",
     "\n",
