--- a/Ch03/3.Recurrent_networks.ipynb
+++ b/Ch03/3.Recurrent_networks.ipynb
@@ -1,6 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Recurrent Neural Networks\n",
+    "\n",
+    "Recurrent neural networks (RNNs) have proven their success in learning from time-series data.\n",
+    "\n",
+    "In this chapter, we will use a RNN to learn to predict CO2 concentration levels in the next 5 years. Specifically, you will learn the following.\n",
+    "\n",
+    "* How to do simple data exploration on time series data\n",
+    "* How to define a RNN model\n",
+    "* How to transfrom time series data to train a sequential model\n",
+    "* How to train a model\n",
+    "\n",
+    "<table align=\"left\">\n",
+    "    <td>\n",
+    "        <a target=\"_blank\" href=\"https://colab.research.google.com/github/thushv89/manning_tf2_in_action/blob/master/Ch03/3.Recurrent_networks.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
+    "    </td>\n",
+    "</table>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -401,6 +423,8 @@
     }
    ],
    "source": [
+    "# Code listing 3.5\n",
+    "\n",
     "import numpy as np\n",
     "\n",
     "def generate_data(co2_arr,n_seq):\n",
@@ -555,6 +579,8 @@
     }
    ],
    "source": [
+    "# Code listing 3.6\n",
+    "\n",
     "import numpy as np\n",
     "\n",
     "# Getting the last 12 values from the history to generate the first prediction\n",
