--- a/Ch03/4.Transformer.ipynb
+++ b/Ch03/4.Transformer.ipynb
@@ -14,10 +14,27 @@
     "Both the encoder and the decoder has multiple layers in it, and each layer consists of following types of sub layers.\n",
     "\n",
     "* Self-attention layer - This layer allows to pay attention to other inputs words in the sequence while processing a given input word. For example if the model is processing the word \"it\" from the sentence \"I kicked the ball and it disappeared\", this layer can pay attention the word \"ball\" while processing the word \"it\". This ability is quite important when it comes to natural language related tasks.\n",
-    "* Fully connected layer - This adds depth to the model, allowing the model to learn more and more high level features.\n",
+    "* Fully connected layer - This adds depth to the model, allowing the model to learn more and more high level features. \n",
+    "\n",
+    "In this notebook you will learn,\n",
+    "\n",
+    "* The computations used in the self-attention and fully-connected sub layers\n",
+    "* How to use the sub-classing API to create custom Self-Attention and Fully Connected layers\n",
+    "* Use TensorFlow opeartions to define input masks\n",
+    "* Define the Encoder and Decoder as layers\n",
     "\n",
     "\n",
-    "\n",
+    "<table align=\"left\">\n",
+    "    <td>\n",
+    "        <a target=\"_blank\" href=\"https://colab.research.google.com/github/thushv89/manning_tf2_in_action/blob/master/Ch03/4.Transformer.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
+    "    </td>\n",
+    "</table>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Importing necessary libraries"
    ]
   },
@@ -65,12 +82,20 @@
     }
    ],
    "source": [
-    "n_seq = 7\n",
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "\n",
+    "n_seq = 7 # Sequence length\n",
+    "\n",
+    "# Defining the input\n",
     "x = tf.constant(np.random.normal(size=(1,n_seq,512)), dtype='float32')\n",
+    "\n",
+    "# Query, Key and Value matrices\n",
     "Wq = tf.Variable(np.random.normal(size=(512,512)), dtype='float32')\n",
     "Wk = tf.Variable(np.random.normal(size=(512,512)), dtype='float32')\n",
     "Wv = tf.Variable(np.random.normal(size=(512,512)), dtype='float32')\n",
     "\n",
+    "# Printing the shapes of the data\n",
     "print('x.shape={}'.format(x.shape))\n",
     "print('Wq.shape={}'.format(Wq.shape))\n",
     "print('Wk.shape={}'.format(Wk.shape))\n",
@@ -100,38 +125,51 @@
     }
    ],
    "source": [
+    "# Code listing 3.7\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "\n",
     "class SelfAttentionLayer(layers.Layer):\n",
-    "    \n",
+    "    \"\"\" Defines the computations in the self attention layer \"\"\"\n",
     "    def __init__(self, d):\n",
     "        super(SelfAttentionLayer, self).__init__()\n",
+    "        # Feature dimensionality of the output\n",
     "        self.d = d\n",
     "    \n",
     "    def build(self, input_shape):\n",
+    "        # Query weight matrix\n",
     "        self.Wq = self.add_weight(\n",
     "            shape=(input_shape[-1], self.d), initializer='glorot_uniform',\n",
     "            trainable=True, dtype='float32'\n",
     "        )        \n",
+    "        # Key weight matrix\n",
     "        self.Wk = self.add_weight(\n",
     "            shape=(input_shape[-1], self.d), initializer='glorot_uniform',\n",
     "            trainable=True, dtype='float32'\n",
     "        )\n",
+    "        # Value weight matrix\n",
     "        self.Wv = self.add_weight(\n",
     "            shape=(input_shape[-1], self.d), initializer='glorot_uniform',\n",
     "            trainable=True, dtype='float32'\n",
     "        )\n",
     "    \n",
     "    def call(self, q_x, k_x, v_x):\n",
+    "        # Computing query, key and value\n",
     "        q = tf.matmul(q_x,self.Wq)\n",
     "        k = tf.matmul(k_x,self.Wk)\n",
     "        v = tf.matmul(v_x,self.Wv)\n",
-    "\n",
+    "        \n",
+    "        # Computing the probability matrix\n",
     "        p = tf.nn.softmax(tf.matmul(q, k, transpose_b=True)/math.sqrt(self.d))\n",
     "        p = tf.squeeze(p)\n",
     "\n",
+    "        # Computing the final output\n",
     "        h = tf.matmul(p, v)\n",
     "        return h,p\n",
     "\n",
+    "# Creating a dummy self attention layer\n",
     "layer = SelfAttentionLayer(512)\n",
+    "# Getting the output\n",
     "h, p = layer(x, x, x)\n",
     "print(h.shape)"
    ]
@@ -159,9 +197,11 @@
     }
    ],
    "source": [
+    "# Defining an array of SelfAttentionLayer objects forming a multi-head attention layer\n",
     "multi_attn_head = [SelfAttentionLayer(64) for i in range(8)]\n",
     "outputs = [head(x, x, x)[0] for head in multi_attn_head]\n",
     "\n",
+    "# Concatting the individual outputs to a single output\n",
     "outputs = tf.concat(outputs, axis=-1)\n",
     "print(outputs.shape)"
    ]
@@ -189,14 +229,20 @@
     }
    ],
    "source": [
+    "# Code listing 3.9\n",
+    "import tensorflow as tf\n",
+    "\n",
     "class FCLayer(layers.Layer):\n",
-    "    \n",
+    "    \"\"\" The computations of a fully connected sublayer \"\"\"\n",
     "    def __init__(self, d1, d2):\n",
     "        super(FCLayer, self).__init__()\n",
+    "        # Dimensionality of the first hidden layer\n",
     "        self.d1 = d1\n",
+    "        # Dimensionality of the second hidden layer\n",
     "        self.d2 = d2\n",
     "    \n",
     "    def build(self, input_shape):\n",
+    "        # First layer's weights and biases\n",
     "        self.W1 = self.add_weight(\n",
     "            shape=(input_shape[-1], self.d1), initializer='glorot_uniform',\n",
     "            trainable=True, dtype='float32'\n",
@@ -205,6 +251,7 @@
     "            shape=(self.d1,), initializer='glorot_uniform',\n",
     "            trainable=True, dtype='float32'\n",
     "        )        \n",
+    "        # Second layer's weights and biases\n",
     "        self.W2 = self.add_weight(\n",
     "            shape=(input_shape[-1], self.d2), initializer='glorot_uniform',\n",
     "            trainable=True, dtype='float32'\n",
@@ -215,10 +262,14 @@
     "        )  \n",
     "    \n",
     "    def call(self, x):\n",
+    "        # Computing the first fully connected output\n",
     "        ff1 = tf.nn.relu(tf.matmul(x,self.W1)+self.b1)\n",
+    "        # Computing the second fully connected output\n",
+    "        # Note that the second layer doesn't use an activation\n",
     "        ff2 = tf.matmul(x,self.W2)+self.b2\n",
     "        return ff2\n",
     "    \n",
+    "# Creating a dummy fully connected layer\n",
     "ff = FCLayer(2048, 512)(h)\n",
     "print(ff.shape)"
    ]
@@ -246,40 +297,51 @@
     }
    ],
    "source": [
-    "\"i kicked the ball and it disappeared\"\n",
+    "# Code listing 3.8\n",
+    "import tensorflow as tf\n",
+    "\n",
     "class SelfAttentionLayer(layers.Layer):\n",
+    "    \"\"\" Defines the computations in the self attention layer \"\"\"\n",
     "    \n",
-    "    def __init__(self, d):\n",
+    "    def __init__(self, d):        \n",
     "        super(SelfAttentionLayer, self).__init__()\n",
+    "        # Feature dimensionality of the output\n",
     "        self.d = d\n",
     "    \n",
     "    def build(self, input_shape):\n",
+    "        # Query weight matrix\n",
     "        self.Wq = self.add_weight(\n",
     "            shape=(input_shape[-1], self.d), initializer='glorot_uniform',\n",
     "            trainable=True, dtype='float32'\n",
     "        )        \n",
+    "        # Key weight matrix\n",
     "        self.Wk = self.add_weight(\n",
     "            shape=(input_shape[-1], self.d), initializer='glorot_uniform',\n",
     "            trainable=True, dtype='float32'\n",
     "        )\n",
+    "        # Value weight matrix\n",
     "        self.Wv = self.add_weight(\n",
     "            shape=(input_shape[-1], self.d), initializer='glorot_uniform',\n",
     "            trainable=True, dtype='float32'\n",
     "        )\n",
     "    \n",
     "    def call(self, q_x, k_x, v_x, mask=None):\n",
+    "        # Computing query, key and value\n",
     "        q = tf.matmul(q_x,self.Wq) #[None, t, d]\n",
     "        k = tf.matmul(k_x,self.Wk) #[None, t, d]\n",
     "        v = tf.matmul(v_x,self.Wv) #[None, t, d]\n",
-    "        p = tf.matmul(q, k, transpose_b=True)/math.sqrt(self.d) # [None, t, t]\n",
     "        \n",
+    "        # Computing the probability matrix\n",
+    "        p = tf.matmul(q, k, transpose_b=True)/math.sqrt(self.d) # [None, t, t]\n",
+    "                \n",
     "        if mask is None:\n",
     "            p = tf.nn.softmax(p)\n",
     "        else:\n",
+    "            # Creating the mask\n",
     "            p += mask * -1e9\n",
     "            p = tf.nn.softmax(p)\n",
     "                \n",
-    "\n",
+    "        # Computing the final output\n",
     "        h = tf.matmul(p, v) # [None, t, t] . [None, t, d] => [None, t, d]\n",
     "        return h,p\n",
     "\n",
@@ -319,10 +381,7 @@
     }
    ],
    "source": [
-    "# Controlling decimal formatting\n",
-    "#np.set_printoptions(precision=3)\n",
-    "#print(p.numpy())\n",
-    "\n",
+    "# Creating a dummy mask\n",
     "mask = 1 - tf.linalg.band_part(tf.ones((7, 7)), -1, 0)\n",
     "print(mask)"
    ]
@@ -362,51 +421,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Code listing 3.10\n",
+    "import tensorflow as tf\n",
+    "\n",
     "class EncoderLayer(layers.Layer):\n",
+    "    \"\"\" The Encoder layer \"\"\"\n",
     "    \n",
     "    def __init__(self, d, n_heads):\n",
     "        super(EncoderLayer, self).__init__()\n",
+    "        # Feature dimensionality\n",
     "        self.d = d\n",
+    "        # Dimensionality of a head\n",
     "        self.d_head = int(d/n_heads) \n",
+    "        # Number of heads\n",
     "        self.n_heads = n_heads\n",
+    "        # Actual attention heads\n",
     "        self.attn_heads = [SelfAttentionLayer(self.d_head) for i in range(self.n_heads)]\n",
+    "        # Fully connected layer\n",
     "        self.fc_layer = FCLayer(2048, self.d)\n",
     " \n",
     "    def call(self, x):\n",
-    "        print(x.shape)\n",
+    "        \n",
     "        def compute_multihead_output(x):\n",
+    "            \"\"\" Computing the multi head attention output\"\"\"\n",
     "            outputs = [head(x, x, x)[0] for head in self.attn_heads]            \n",
     "            outputs = tf.concat(outputs, axis=-1)\n",
     "            return outputs\n",
-    "\n",
+    "        \n",
+    "        # Multi head attention layer output\n",
     "        h1 = compute_multihead_output(x)\n",
+    "        # Fully connected layer output\n",
     "        y = self.fc_layer(h1)\n",
     "        \n",
     "        return y\n",
     "\n",
+    "# Code listing 3.11\n",
     "class DecoderLayer(layers.Layer):\n",
-    "    \n",
+    "    \"\"\" The decoder layer \"\"\"\n",
     "    def __init__(self, d, n_heads):\n",
     "        super(DecoderLayer, self).__init__()\n",
+    "        # Feature dimensionality\n",
     "        self.d = d\n",
+    "        # Dimensionality of a single head\n",
     "        self.d_head = int(d/n_heads)\n",
+    "        # Actual self attention heads (decoder inputs)\n",
     "        self.dec_attn_heads = [SelfAttentionLayer(self.d_head) for i in range(n_heads)]\n",
+    "        # Actual self attention heads (encoder outputs)\n",
     "        self.attn_heads = [SelfAttentionLayer(self.d_head) for i in range(n_heads)]\n",
+    "        # Fully connected layer\n",
     "        self.fc_layer = FCLayer(2048, self.d)\n",
-    "        \n",
-    "    def build(self, input_shape):\n",
-    "        [head.build(input_shape) for head in self.dec_attn_heads]\n",
-    "        [head.build(input_shape) for head in self.attn_heads]\n",
-    "        self.fc_layer.build(input_shape)\n",
     "        \n",
     "    def call(self, de_x, en_x, mask=None):\n",
     "        \n",
     "        def compute_multihead_output(de_x, en_x, mask=None):\n",
+    "            \"\"\" Computing the multi head attention output\"\"\"\n",
     "            outputs = [head(en_x, en_x, de_x, mask)[0] for head in self.attn_heads]\n",
     "            outputs = tf.concat(outputs, axis=-1)\n",
     "            return outputs\n",
     "        \n",
+    "        # Multi head attention layer output (from decoder inputs)\n",
     "        h1 = compute_multihead_output(de_x, de_x, mask)        \n",
+    "        # Multi head attention layer output (from encoder outputs)\n",
     "        h2 = compute_multihead_output(h1, en_x)\n",
     "        y = self.fc_layer(h2)\n",
     "        return y\n"
@@ -461,27 +536,43 @@
     }
    ],
    "source": [
-    "n_steps = 25\n",
-    "n_en_vocab = 300\n",
-    "n_de_vocab = 400\n",
-    "n_heads = 8\n",
-    "d = 512\n",
+    "# Code listing 3.12\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "# Defining some hyperparameters\n",
+    "n_steps = 25 # Sequence length\n",
+    "n_en_vocab = 300 # Encoder's vocabulary size\n",
+    "n_de_vocab = 400 # Decoder's vocabulary size\n",
+    "n_heads = 8 # Number of attention heads\n",
+    "d = 512 # The feature dimensionality of each layer\n",
+    "\n",
+    "# Look-ahead mask\n",
     "mask = 1 - tf.linalg.band_part(tf.ones((n_steps, n_steps)), -1, 0)\n",
     "\n",
+    "# Encoder input layer\n",
     "en_inp = layers.Input(shape=(n_steps,))\n",
+    "# Encoder input embedddings\n",
     "en_emb = layers.Embedding(n_en_vocab, 512, input_length=n_steps)(en_inp)\n",
-    "print(en_emb)\n",
+    "\n",
+    "# Two encoder layers\n",
     "en_out1 = EncoderLayer(d, n_heads)(en_emb)\n",
     "en_out2 = EncoderLayer(d, n_heads)(en_out1)\n",
     "\n",
+    "# Decoder input layer\n",
     "de_inp = layers.Input(shape=(n_steps,))\n",
+    "# Decoder input embeddings\n",
     "de_emb = layers.Embedding(n_de_vocab, 512, input_length=n_steps)(de_inp)\n",
     "\n",
+    "# Two decoder layers\n",
     "de_out1 = DecoderLayer(d, n_heads)(de_emb, en_out2, mask)\n",
     "de_out2 = DecoderLayer(d, n_heads)(de_out1, en_out2, mask)\n",
+    "\n",
+    "# Final output layer\n",
     "de_pred = layers.Dense(n_de_vocab, activation='softmax')(de_out2)\n",
     "\n",
+    "# Defining the model\n",
     "transformer = models.Model(inputs=[en_inp, de_inp], outputs=de_pred, name='MinTransformer')\n",
+    "# Compiling the model\n",
     "transformer.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['acc'])\n",
     "transformer.summary()"
    ]
