Added comments and fixed issues

--- a/Ch02/1.Tensorflow_Fundamentals.ipynb
+++ b/Ch02/1.Tensorflow_Fundamentals.ipynb
@@ -170,7 +170,6 @@
     "\n",
     "import tensorflow as tf\n",
     "import numpy as np\n",
-    "fix_random_seed(4321)\n",
     "\n",
     "tf.reset_default_graph()\n",
     "\n",
@@ -796,6 +795,7 @@
    "source": [
     "import requests\n",
     "import pandas as pd\n",
+    "import tensorflow as tf\n",
     "\n",
     "# Retrieve the data\n",
     "url = \"https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data\"\n",
